--- a/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
+++ b/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
@@ -117,10 +117,16 @@
     <Compile Include="Drivers\Project\ProjectDriver.cs" />
     <Compile Include="Drivers\Project\SearchDriver.cs" />
     <Compile Include="Drivers\Project\SearchResultState.cs" />
+    <Compile Include="Drivers\Property\PropertyDriver.cs" />
     <Compile Include="Feature\Login.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Login.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Feature\Postproject.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Postproject.feature</DependentUpon>
     </Compile>
     <Compile Include="Feature\VIewListOfProject.feature.cs">
       <AutoGen>True</AutoGen>
@@ -130,6 +136,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Steps\HomeScreenstep.cs" />
     <Compile Include="Steps\Loginstep.cs" />
+    <Compile Include="Steps\PostProperty.cs" />
     <Compile Include="Support\ActionResultExtensions.cs" />
     <Compile Include="Support\CatalogContentU.cs" />
     <Compile Include="Support\CatalogContext.cs" />
@@ -143,6 +150,10 @@
     <None Include="Feature\Login.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Login.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Feature\Postproject.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Postproject.feature.cs</LastGenOutput>
     </None>
     <None Include="Feature\VIewListOfProject.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
