--- a/PPCRental_Project/PPCRental_Project.UITests.Selenium/packages.config
+++ b/PPCRental_Project/PPCRental_Project.UITests.Selenium/packages.config
@@ -10,6 +10,7 @@
   <package id="NUnit" version="3.0.0" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net45" />
   <package id="Selenium.Chrome.WebDriver" version="2.33" targetFramework="net45" />
+  <package id="Selenium.Firefox.WebDriver" version="0.19.1" targetFramework="net45" />
   <package id="Selenium.Support" version="3.8.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net45" />
   <package id="SpecFlow" version="2.2.1" targetFramework="net45" />
