--- a/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
+++ b/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
@@ -138,6 +138,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>VIewListOfProject.feature</DependentUpon>
     </Compile>
+    <Compile Include="Feature\viewListofProjectAgency.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>viewListofProjectAgency.feature</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Steps\HomeScreenstep.cs" />
     <Compile Include="Steps\Loginstep.cs" />
@@ -169,6 +174,10 @@
     <None Include="Feature\VIewListOfProject.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>VIewListOfProject.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Feature\viewListofProjectAgency.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>viewListofProjectAgency.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
