--- a/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
+++ b/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
@@ -118,10 +118,16 @@
     <Compile Include="Drivers\Project\SearchDriver.cs" />
     <Compile Include="Drivers\Project\SearchResultState.cs" />
     <Compile Include="Drivers\Property\PropertyDriver.cs" />
+    <Compile Include="Drivers\Sale\SaleDriver.cs" />
     <Compile Include="Feature\Login.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Login.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Feature\LoginAdmin.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LoginAdmin.feature</DependentUpon>
     </Compile>
     <Compile Include="Feature\Postproject.feature.cs">
       <AutoGen>True</AutoGen>
@@ -133,10 +139,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>PropertyDetail.feature</DependentUpon>
     </Compile>
-    <Compile Include="Feature\VIewListOfProject.feature.cs">
+    <Compile Include="Feature\viewListAgencyProjectSale.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>VIewListOfProject.feature</DependentUpon>
+      <DependentUpon>viewListAgencyProjectSale.feature</DependentUpon>
     </Compile>
     <Compile Include="Feature\viewListofProjectAgency.feature.cs">
       <AutoGen>True</AutoGen>
@@ -145,9 +151,11 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Steps\HomeScreenstep.cs" />
+    <Compile Include="Steps\LoginAdminSteps.cs" />
     <Compile Include="Steps\Loginstep.cs" />
     <Compile Include="Steps\PostProperty.cs" />
     <Compile Include="Steps\PropertyDetailStep.cs" />
+    <Compile Include="Steps\viewListOfProjectAgencySaleStep.cs" />
     <Compile Include="Steps\ViewofProjectAgency.cs" />
     <Compile Include="Support\ActionResultExtensions.cs" />
     <Compile Include="Support\CatalogContentU.cs" />
@@ -163,6 +171,10 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Login.feature.cs</LastGenOutput>
     </None>
+    <None Include="Feature\LoginAdmin.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>LoginAdmin.feature.cs</LastGenOutput>
+    </None>
     <None Include="Feature\Postproject.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Postproject.feature.cs</LastGenOutput>
@@ -171,9 +183,9 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>PropertyDetail.feature.cs</LastGenOutput>
     </None>
-    <None Include="Feature\VIewListOfProject.feature">
+    <None Include="Feature\viewListAgencyProjectSale.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>VIewListOfProject.feature.cs</LastGenOutput>
+      <LastGenOutput>viewListAgencyProjectSale.feature.cs</LastGenOutput>
     </None>
     <None Include="Feature\viewListofProjectAgency.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
