--- a/PPCRental_Project/PPCRental_Project.UITests.Selenium/PPCRental_Project.UITests.Selenium.csproj
+++ b/PPCRental_Project/PPCRental_Project.UITests.Selenium/PPCRental_Project.UITests.Selenium.csproj
@@ -109,6 +109,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Loginsteps.cs" />
     <Compile Include="postProject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\Browsers.cs" />
