--- a/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
+++ b/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
@@ -114,11 +114,18 @@
   <ItemGroup>
     <Compile Include="Drivers\Agency\AgencyDriver.cs" />
     <Compile Include="Drivers\Home\HomeDriver.cs" />
+    <Compile Include="Drivers\insert.cs" />
     <Compile Include="Drivers\Project\ProjectDriver.cs" />
     <Compile Include="Drivers\Project\SearchDriver.cs" />
     <Compile Include="Drivers\Project\SearchResultState.cs" />
     <Compile Include="Drivers\Property\PropertyDriver.cs" />
     <Compile Include="Drivers\Sale\SaleDriver.cs" />
+    <Compile Include="Drivers\SearchDriver.cs" />
+    <Compile Include="Feature\Fillter.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Fillter.feature</DependentUpon>
+    </Compile>
     <Compile Include="Feature\Login.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -150,6 +157,7 @@
       <DependentUpon>viewListofProjectAgency.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Steps\FillterStep.cs" />
     <Compile Include="Steps\HomeScreenstep.cs" />
     <Compile Include="Steps\LoginAdminSteps.cs" />
     <Compile Include="Steps\Loginstep.cs" />
@@ -167,6 +175,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Feature\Fillter.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Fillter.feature.cs</LastGenOutput>
+    </None>
     <None Include="Feature\Login.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Login.feature.cs</LastGenOutput>
